<resources>
    <string name="app_name">MovieApps</string>
    <string name="duration_label">Duration</string>
    <string name="release_year_label">Year</string>
    <string name="average_vote_label">Vote</string>
    <string name="status_label">Status</string>
    <string name="synopsis_header">Synopsis</string>
    <string name="favorite_empty_result_remark">There is no favorite movies.</string>
    <string name="empty_result_remark">No Movie Available</string>
    <string name="no_network_connection_message">No network connection</string>
    <string name="something_went_wrong_remark">Oopss, something went wrong.</string>
    <string name="arrow_back_icon_description">Arrow Back Icon</string>
    <string name="favorite_icon_description">Favorite Icon</string>
    <string name="movie_image_details_description">Movie Image Details</string>
    <string name="title_favorite">Favorite</string>
    <string name="successfully_added_movie_to_favorite_message">Added to favorite movies</string>
    <string name="successfully_removed_movie_from_favorite_message">Removed from favorite movies</string>

</resources>