<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivArrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4"
            android:background="?attr/actionBarItemBackground"
            android:contentDescription="@string/arrow_back_icon_description"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvToolbarTitle"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivFavoriteIcon"
            app:layout_constraintStart_toEndOf="@id/ivArrowBack"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Details" />

        <ImageView
            android:id="@+id/ivFavoriteIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_4"
            android:background="?attr/actionBarItemBackground"
            android:contentDescription="@string/favorite_icon_description"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#4B000000"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/spacing_4">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMovieDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_12"
                android:layout_marginTop="@dimen/spacing_4"
                app:cardCornerRadius="@dimen/corner_radius_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivMovieDetails"
                    android:layout_width="300dp"
                    android:layout_height="450dp"
                    android:contentDescription="@string/movie_image_details_description"
                    android:scaleType="centerCrop"
                    tools:src="@color/black" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvDurationValue"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_4"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/tvReleaseYearValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvMovieDetails"
                tools:text="1h 30m" />

            <TextView
                android:id="@+id/tvDurationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_1"
                android:text="@string/duration_label"
                app:layout_constraintEnd_toEndOf="@+id/tvDurationValue"
                app:layout_constraintStart_toStartOf="@+id/tvDurationValue"
                app:layout_constraintTop_toBottomOf="@+id/tvDurationValue" />

            <TextView
                android:id="@+id/tvReleaseYearValue"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/tvVoteAvgValue"
                app:layout_constraintStart_toEndOf="@+id/tvDurationValue"
                app:layout_constraintTop_toTopOf="@+id/tvDurationValue"
                tools:text="2020" />

            <TextView
                android:id="@+id/tvReleaseYearLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_year_label"
                app:layout_constraintEnd_toEndOf="@+id/tvReleaseYearValue"
                app:layout_constraintStart_toStartOf="@+id/tvReleaseYearValue"
                app:layout_constraintTop_toTopOf="@+id/tvDurationLabel" />

            <TextView
                android:id="@+id/tvVoteAvgValue"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_4"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/tvStatusValue"
                app:layout_constraintStart_toEndOf="@+id/tvReleaseYearValue"
                app:layout_constraintTop_toTopOf="@+id/tvReleaseYearValue"
                tools:text="7.8" />

            <TextView
                android:id="@+id/tvVoteAvgLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_vote_label"
                app:layout_constraintEnd_toEndOf="@+id/tvVoteAvgValue"
                app:layout_constraintStart_toStartOf="@+id/tvVoteAvgValue"
                app:layout_constraintTop_toTopOf="@+id/tvReleaseYearLabel" />

            <TextView
                android:id="@+id/tvStatusValue"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_4"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvVoteAvgValue"
                app:layout_constraintTop_toTopOf="@+id/tvReleaseYearValue"
                tools:text="Released" />

            <TextView
                android:id="@+id/tvStatusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_label"
                app:layout_constraintEnd_toEndOf="@+id/tvStatusValue"
                app:layout_constraintStart_toStartOf="@+id/tvStatusValue"
                app:layout_constraintTop_toTopOf="@+id/tvVoteAvgLabel" />

            <TextView
                android:id="@+id/tvSynopsisLabel"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_4"
                android:layout_marginTop="@dimen/spacing_4"
                android:text="@string/synopsis_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDurationLabel" />

            <TextView
                android:id="@+id/tvSynopsisValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_2"
                app:layout_constraintEnd_toEndOf="@id/tvSynopsisLabel"
                app:layout_constraintStart_toStartOf="@+id/tvSynopsisLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvSynopsisLabel"
                tools:text="Synopsisssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>